2006-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1274322 - added a dialog for sending text to
	                the paste.tclers.tk paste site. 
	* tkchat.tcl (::tkchat::LoadHistoryFromIndex): Added a base frame
	                to fix the look with tile widgets.

2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1482926 - add an /eval command to evaluate
	                short tcl scripts.
	* tkchat.tcl (::tkchat::ParseHistLog): Work around the logs being
	                returned as iso8859-1 when the data is really utf-8.

2006-09-05  Kevin B. Kenny  <kennykb@acm.org>

	* tkchat.tcl - Added hooks to KHIM (Kevin's Hacky Input Method)
	to allow easier typing of international characters.
	
2006-06-27 Torsten Berg  <berg@typoscriptics.de>

	* tkchat.tcl: - Tile support for the pane in the main window
	              - Internal code cleanup for consistent Tile handling
			(variables useTile and NS)
		      - Console support for platforms
			other than Windows (Debug->Console)
		      - Allow usage of new Tab in some browsers like Opera
			(new checkbutton option in Preferences->Options)

2006-06-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Allow the non-SASL jabber auth to work with STARTTLS
	              logins. We have to capture the new stream id.

2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addTraffic): Fixed bug in handling of nick
	(::tkjabber::RosterCB):              changes. Reverted previous
	(::tkchat::updateOnlineNames):       commit's workaround.
	(::tkjabber::setNick):
	(::tkjabber::transferNick):

	* tkchat.tcl (::tkchat::CreateGUI): Only execute autoStatus proc when
	(::tkchat::checkCommand):           autostatus enabled. Switch user to
	(::tkjabber::LoginCB):              extended away when user is away
	(::tkjabber::MucEnterCB):           manually and idle for an extended