@@ -1,3 +1,8 @@
+2006-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:   FR 681734 - log memos to mbox file for later
+	                perusal. Some font selection mods for Xft.
+
 2006-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:   FR 1274322 - added a dialog for sending text to
